# slave-thread

./: .travis.yml  slave-thread.cabal  threaded-io.cabal
.github/workflows/: check.yaml
test/: Main.hs
tests/: Main.hs
