name: slave-thread
version: 1.1
synopsis: A fundamental solution to ghost threads and silent exceptions
description:
  Vanilla thread management in Haskell is low level and 
  it does not approach the problems related to thread deaths.
  When it's used naively the following typical problems arise:
  .
  * When a forked thread dies due to an uncaught exception,
  the exception does not get raised in the main thread,
  which is why the program continues to run as if nothing happened,
  i.e., with the presumption that the already dead thread is running normally.
  Naturally this may very well bring your program to a chaotic state.
  .
  * Another issue is that one thread dying does not
  affect any of the threads forked from it.
  That's why your program may be accumulating ghost threads.
  .
  * Ever dealt with your program ignoring the \<Ctrl-C\> strikes?
  .
  This library solves all the issues above with a concept of a slave thread.
  A slave thread has the following properties:
  .
  1. When it dies for whatever reason (exception or finishing normally)
  it kills all the slave threads that were forked from it.
  This protects you from ghost threads.
  .
  2. It waits for all slaves to die and execute their finalizers 
  before executing its own finalizer and getting released itself.
  This gives you hierarchical releasing of resources.
  .
  3. When a slave thread dies with an uncaught exception
  it reraises it in the master thread.
  This protects you from silent exceptions 
  and lets you be sure of getting informed
  if your program gets brought to an erroneous state.
category: Concurrency, Concurrent, Error Handling, Exceptions, Failure
homepage: https://github.com/nikita-volkov/slave-thread
bug-reports: https://github.com/nikita-volkov/slave-thread/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2014, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/slave-thread.git

library
  hs-source-dirs: library
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules: SlaveThread
  other-modules:
    SlaveThread.Prelude
    SlaveThread.Util.LowLevelForking
  build-depends:
    base >=4.9 && <5,
    deferred-folds >=0.9 && <0.10,
    focus >=1 && <1.1,
    foldl >=1 && <2,
    stm-containers >=1.1 && <1.2

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase <2,
    SafeSemaphore ==0.10.*,
    slave-thread,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11
