name:
  threaded-io
version:
  0.1.0
synopsis:
description:
category:
  Database
homepage:
  https://github.com/nikita-volkov/threaded-io 
bug-reports:
  https://github.com/nikita-volkov/threaded-io/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/threaded-io.git


library
  hs-source-dirs:
    library
  other-modules:
  exposed-modules:
    ThreadedIO
  build-depends:
    -- data:
    stm-containers >= 0.1.3 && < 0.2,
    -- general:
    transformers >= 0.3 && < 0.5,
    partial-handler >= 0.1.0 && < 0.2,
    base-prelude >= 0.1.3 && < 0.2,
    base >= 4.5 && < 4.8
  ghc-options:
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
